Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ title: Infitialis Blog
           {% if paginator.next_page %}
             <a href="{{ paginator.next_page_path }}" class="next">Next &raquo;</a>
           {% else %}
-            <span class="next ">Next &raquo;s</span>
+            <span class="next ">Next &raquo;</span>
           {% endif %}
         </div>
     </div>
