--- a/index.html
+++ b/index.html
@@ -17,21 +17,17 @@ title: Infitialis Blog
       {% endfor %}
 
       <!-- Pagination links -->
-        <div class="pagination">
+      <div class="pagination" style="text-align: center;">
           {% if paginator.previous_page %}
             <a href="{{ paginator.previous_page_path }}" class="previous">
               &laquo; Previous
             </a>
-          {% else %}
-            <span class="previous">Previous</span>
           {% endif %}
           <span class="page_number ">
-            Page: {{ paginator.page }} of {{ paginator.total_pages }}
+            Page {{ paginator.page }} of {{ paginator.total_pages }}
           </span>
           {% if paginator.next_page %}
             <a href="{{ paginator.next_page_path }}" class="next">Next &raquo;</a>
-          {% else %}
-            <span class="next ">Next &raquo;</span>
           {% endif %}
         </div>
     </div>
